--- a/Hra.Intra.Web/Web.config
+++ b/Hra.Intra.Web/Web.config
@@ -21,7 +21,7 @@
       providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="false" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
