--- a/Hra.Portal/Web.config
+++ b/Hra.Portal/Web.config
@@ -22,7 +22,7 @@
   </connectionStrings>
     
   <system.web>
-    <compilation debug="false" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
