--- a/Hra.Intra.DA/App.Config
+++ b/Hra.Intra.DA/App.Config
@@ -8,9 +8,9 @@
   </configSections>
   <connectionStrings>
     <add name="INTRAEntities"
-      connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=INTRA;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=INTRA;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;"    
       providerName="System.Data.EntityClient"/>
-  </connectionStrings>
+  </connectionStrings> 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
