--- a/Hra.Intra.Web/Web.config
+++ b/Hra.Intra.Web/Web.config
@@ -17,11 +17,11 @@
   </appSettings>
   <connectionStrings>
     <add name="INTRAEntities"
-      connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.100.14.41;initial catalog=INTRA;user id=sa;password=Password123.;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=172.16.3.210;initial catalog=INTRA;user id=biomed;password=biomed;MultipleActiveResultSets=True;App=EntityFramework&quot;"
       providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="false" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
   <runtime>
